--- a/.github/workflows/exercise4.yml
+++ b/.github/workflows/exercise4.yml
@@ -28,3 +28,20 @@ jobs:
         with:
           name: build 
           path: build   
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: production
+      url: http://irritating-start.surge.sh
+    steps:
+      - name: Download the Build Artifact
+        uses: actions/download-artifact@v4.1.2
+        with:
+          name: build
+      - name: deploy to surge
+        run: npx surge --project ‘.’ --domain http://irritating-start.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+
